<resources>
    <string name="app_name">Quiz App</string>
    <string name="sales">SALES (Quota) - Field Representatives and Management</string>
    <string name="non_quota_sales">SALES (Non-Quota) - Support and Other</string>
    <string name="non_sales">NON-SALES</string>
    <string name="americas">Americas</string>
    <string name="europe">Europe</string>
    <string name="asia">Asia</string>
    <string name="awards_dinner">Awards Dinner</string>
    <string name="basketball_contest">Basketball Contest</string>
    <string name="cruise_dinner">Harbor Boat Cruise / Dinner</string>
    <string name="photo_service">Headshot Photo Service</string>
</resources>
